--- a/.prettierrc
+++ b/.prettierrc
@@ -7,6 +7,7 @@
   "importOrder": [
     "^@modules/(.*)$",
     "^@lib/(.*)$",
+    "^@pages/(.*)$",
     "^@container/(.*)$",
     "^@components/(.*)$",
     "^@public/(.*)$",
