--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "craco-alias": "^3.0.1",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
@@ -16,6 +17,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
     "styled-normalize": "^8.0.7",
+    "swiper": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
